@@ -721,6 +721,10 @@
 			<node name="authorize" value="Оторизация"/>
 			<node name="resetPosition" value="Назад"/>
 			<node name="sendReport" value="Изпрати съобщение"/>
+			<node name="addToFavorites" value="Добави в избрани"/>
+			<node name="removeFromFavorites" value="Премахни от избрани"/>
+			<node name="markAsRead" value="Mark as read" toBeTranslated="true"/>
+			<node name="markAsUnread" value="Mark as unread" toBeTranslated="true"/>
 		</node>
 		<node name="plugin">
 			<node name="installTitle" value="Инсталиране на програма"/>
