@@ -4,6 +4,7 @@
 * Fixed library/bookmarks start
 * Georgian in language list in book info dialog
 * Fixed interface language swithcing (change language immediately in menu, library, etc.)
+* Added "add/remove book to/from favorites" items in BookInfoActivity menu
 
 ===== 1.7.8 (Mar 24, 2013) =====
 * Fixed library scanning: all books are visible in the library
